All sections filled, Fixed navbar responsive text spacing

--- a/styles.css
+++ b/styles.css
@@ -291,31 +291,19 @@ select.font-family {
   src: url("./fonts/OpenDyslexicMono-Regular.otf");
 }
 
-@media (min-width: 1300px) {
-  .navbar-expand-custom {
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
+@media only screen and (max-width: 1600px) {
+  a.nav-link,
+  a.navbar-brand,
+  span#theme-switch-text {
+    font-size: 0.9vw;
   }
-  .navbar-expand-custom .navbar-nav {
-    flex-direction: row;
-  }
-  .navbar-expand-custom .dropdown-menu {
-    position: absolute;
-  }
-  .navbar-expand-custom .nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
-  }
-  .navbar-expand-custom > .container {
-    flex-wrap: nowrap;
-  }
-  .navbar-expand-custom .navbar-collapse {
-    display: flex !important;
-    flex-basis: auto;
-  }
-  .navbar-expand-custom .navbar-toggler {
-    display: none;
+}
+
+@media only screen and (max-width: 1199px) {
+  a.nav-link,
+  a.navbar-brand,
+  span#theme-switch-text {
+    font-size: 16px;
   }
 }
 
